Fix layout of video embed on mobile; Allow scrolling page on mobile; Allow accessing game iframe directly on mobile

--- a/akc/css/common.css
+++ b/akc/css/common.css
@@ -10,10 +10,13 @@ html, body {
 }
 
 body {
+  min-height: 100%;
+}
+
+body {
   margin: 0;
   background-color: #fff;
   color: #000;
 
-  touch-action: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
